cmake_minimum_required(VERSION 3.22)
project(FelicoEngine)
set(CMAKE_CXX_STANDARD 17)
# set(IMGUI_PATH  "imgui")
# file(GLOB IMGUI_SOURCES ${IMGUI_PATH}/*.cpp ${IMGUI_PATH}/backends/*.cpp ${IMGUI_PATH}/*.h ${IMGUI_PATH}/backends/*.h) 
# add_library("ImGui" STATIC ${IMGUI_SOURCES})
find_package(SDL2 REQUIRED)
add_executable(FelicoEngine main.cpp FelicoEngine.cpp)
# target_include_directories("ImGui" PUBLIC ${IMGUI_PATH})
link_libraries(SDL2)
target_link_libraries(FelicoEngine SDL2)